--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<html>
+<html>
 <head>
 <title>Coming Soon</title>
 </head>
@@ -13,7 +13,7 @@
     <p>35 days</p>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <p>Under Maintenance</p>
   </div>
 </div>
 </body>
